# embedded_io_byteorder

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
src/: lib.rs
