[package]
name = "embedded_io_byteorder"
version = "0.2.0"
edition = "2024"
description = "byteorder ext for embedded-io traits"
categories = [
    "encoding",
    "parsing",
    "embedded",
    "no-std",
]
keywords = [
    "byte",
    "endian",
    "big-endian",
    "little-endian",
    "binary",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/823984418/embedded_io_byteorder"

[dependencies]

[dependencies.embedded-io]
version = "0.7.1"

[dependencies.byteorder]
version = "1.5.0"
default-features = false

